2005-03-31 14:20  antirez

	* ChangeLog, STYLE, TODO, jim-aio.c, jim-posix.c, jim-sdl.c,
	  jim-win32.c, jim-win32com.c, jim.c, jim.h: Implemented the C API
	  "background" for the packages system of Jim.

2005-03-29 18:50  antirez

	* ChangeLog, jim.c, test.tcl: [info args] added

2005-03-29 16:17  antirez

	* ChangeLog, jim.c: Fixed [range] for the case of unique element
	  possible as output.

2005-03-29 16:03  antirez

	* ChangeLog, jim.c: random number generator fixed. Was a problem
	  with the initialization of the sbox. (see prev CVS commit
	  comment.)

2005-03-29 15:43  antirez

	* ChangeLog, jim.c: First fix for [rand]. More later as there is an
	  evident bias due to some programming error probably.

2005-03-29 15:38  antirez

	* ChangeLog, Makefile, jim.c, jim.h: A number of fix for commands
	  optimizing a bit too much objects not shared, that didn't played
	  very well with Jim arrays.  Added the [rand] command.

2005-03-28 19:47  antirez

	* ChangeLog, jim.c, test.tcl: The behaviour of [scope] modified a
	  bit. Test updated accordingly.

2005-03-28 18:57  antirez

	* ChangeLog, jim.c, test.tcl: [scope] command + tests

2005-03-26 15:12  antirez

	* ChangeLog, Makefile, jim-sdl.c, jim.c: some GFX primitive to SDL
	  extension. Minor changes to jim.c

2005-03-25 10:34  antirez

	* ChangeLog, bench.tcl, jim.c: SetReturnCodeFromAny() modified to
	  accept numerical codes.

2005-03-24 14:58  antirez

	* ChangeLog, jim.c, test.tcl: [range] command + tests

2005-03-24 12:00  antirez

	* ChangeLog, Makefile, TODO, jim-sdl.c: A simple SDL extension for
	  Jim.

2005-03-22 15:32  antirez

	* ChangeLog, jim.c: Fix for short circuit in expr.

2005-03-22 13:47  antirez

	* ChangeLog, jim.c: expr's || and && operators are now lazy.

2005-03-21 18:04  chi

	* jim.c, jim.h: Add copyright notice within jim.c & jim.h to
	  acknowledge Jim's license.

2005-03-21 13:39  antirez

	* ChangeLog, jim.c, test.tcl: Modified test.tcl to report the list