@@ -2,7 +2,7 @@
  * Copyright 2005 Salvatore Sanfilippo <antirez@invece.org>
  * Copyright 2005 Clemens Hintze <c.hintze@gmx.net>
  *
- * $Id: jim.c,v 1.139 2005/04/02 07:44:24 antirez Exp $
+ * $Id: jim.c,v 1.140 2005/04/02 07:48:03 antirez Exp $
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -7476,13 +7476,15 @@ static char *JimFindBestPackage(Jim_Interp *interp, char **prefixes,
 
 #else /* WIN32 */
 
-static char *JimFindBestPackage(char **prefixes, int prefixc,
-        const char *name, int ver)
+static char *JimFindBestPackage(Jim_Interp *interp, char **prefixes,
+        int prefixc, const char *pkgName, int pkgVer, int flags)
 {
+    JIM_NOTUSED(interp);
     JIM_NOTUSED(prefixes);
     JIM_NOTUSED(prefixc);
-    JIM_NOTUSED(name);
-    JIM_NOTUSED(ver);
+    JIM_NOTUSED(pkgName);
+    JIM_NOTUSED(pkgVer);
+    JIM_NOTUSED(flags);
     return NULL;
 }
 
@@ -11372,7 +11374,7 @@ int Jim_InteractivePrompt(Jim_Interp *interp)
     printf("Welcome to Jim version %d.%d, "
            "Copyright (c) 2005 Salvatore Sanfilippo\n",
            JIM_VERSION / 100, JIM_VERSION % 100);
-    printf("CVS ID: $Id: jim.c,v 1.139 2005/04/02 07:44:24 antirez Exp $\n");
+    printf("CVS ID: $Id: jim.c,v 1.140 2005/04/02 07:48:03 antirez Exp $\n");
     Jim_SetVariableStrWithStr(interp, "jim_interactive", "1");
     while (1) {
         char buf[1024];
